# hw3-DemiLeng

./: Makefile  README.md  config.json  index.html  index.json  myst.yml  pyproject.toml
.github/workflows/: deploy.yml
_build/html/: losc-event-tutorial.json  myst.search.json
_build/site/: myst.search.json  myst.xref.json  objects.inv
_build/site/content/: index.json  losc-event-tutorial.json
_build/site/public/: README-706498abe754d3d2847294126cd835bb.md  README-7a6fc8a7a3f8080faa95b3dfdf52a301.md  README-9703703b65c6f337c707e08ba1d52912.md  README-a6e8c505b7bbad12541030cc83f13540.md  README-d7475da8b661392c784154331a194276.md  README-f4ecea5bc8211aaac9a28f7c7748633e.md
ligotools/: utils.py
ligotools.egg-info/: PKG-INFO  requires.txt
ligotools/tests/: test_readligo.py  test_utils.py
losc-event-tutorial/: index.html
